<resources>
    <string name="app_name">Crime Maps Admin Apps</string>
    <string name="app_package">com.harifrizki.crimemapsapps</string>

    <bool name="app_debug_mode" translatable="false">true</bool>
    <string name="file_provider_name" translatable="false">.provider</string>

    <string name="version_apps">Versi %s</string>

    <string name="title">Title</string>
    <string name="back">Kembali</string>
    <string name="cancel">Batalkan</string>
    <string name="no">Tidak</string>
    <string name="ok">OK</string>
    <string name="change">Ubah</string>
    <string name="done">Selesai</string>
    <string name="temp">Temp</string>
    <string name="more">Selengkapnya</string>
    <string name="yes_delete">Ya, Hapus</string>
    <string name="yes_reset">Ya, Reset</string>
    <string name="yes_activate">Ya, %s</string>
    <string name="choose">Pilih %s</string>

    <string name="label_id">ID</string>
    <string name="label_login">Masuk</string>
    <string name="label_name">Nama</string>
    <string name="label_username">Email</string>
    <string name="label_password">Kata Sandi</string>
    <string name="label_photo_profile">Foto Profil</string>
    <string name="label_photo">Foto</string>
    <string name="label_existing_password">Kata Sandi saat ini</string>
    <string name="label_new_password">Kata Sandi Baru</string>
    <string name="label_confirm_new_password">Konfirmasi Kata Sandi Baru</string>
    <string name="label_not_found">Tidak ditemukan</string>
    <string name="label_address">Alamat</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_latitude_of">Latitude [%s]</string>
    <string name="label_longitude">Longitude</string>
    <string name="label_longitude_of">Longitude [%s]</string>
    <string name="label_see_location">Lihat Lokasi</string>
    <string name="label_description">Deskripsi</string>
    <string name="label_registration_area">Registrasi Area</string>

    <string name="label_welcome_greeting_main">Selamat Datang</string>
    <string name="label_get_image_from">Ambil Gambar melalui</string>

    <string name="label_show_password">Tampilkan Kata Sandi</string>
    <string name="label_hide_password">Sembunyikan Kata Sandi</string>

    <string name="label_count_data">%s</string>
    <string name="label_count_today">Data input per hari ini</string>
    <string name="label_count_month">Data input per bulan ini</string>

    <string name="label_role_state">Jadikan Admin ini sebagai ?</string>
    <string name="label_role_root">Root</string>
    <string name="label_role_admin">Admin</string>

    <string name="label_active">Aktifkan</string>
    <string name="label_active_append">Mengaktifkan</string>
    <string name="label_non_active">Non-Aktifkan</string>
    <string name="label_non_active_append">Menonaktifkan</string>

    <string name="label_change_password">Ganti Kata Sandi</string>

    <string name="label_create_by">Dibuat oleh [%s]</string>
    <string name="label_create_at">Dibuat pada [%s]</string>
    <string name="label_create_by_and_created_date">Dibuat oleh [%s], pada [%s]</string>
    <string name="label_updated_by_and_updated_date">Diubah oleh [%s], pada [%s]</string>
    <string name="label_not_yet">Belum ada %s</string>
    <string name="label_not_yet_updated">Belum ada perubahan data.</string>
    <string name="label_null_created_and_updated">Tidak Ditemukan.</string>

    <string name="label_add">Tambah %s</string>
    <string name="label_add_on">Tambahkan %s</string>
    <string name="label_add_append">Menambahkan %s</string>
    <string name="label_enter_of">Masukkan %s %s</string>
    <string name="label_edit">Ubah %s</string>
    <string name="label_edit_append">Merubah %s</string>
    <string name="label_reset_append">Me-reset %s</string>
    <string name="label_delete_append">Menghapus %s</string>

    <string name="label_plus_two_string">%s %s</string>
    <string name="label_plus_two_string_enter">%s\n%s</string>
    <string name="label_plus_two_string_regex_first">[%s] %s</string>
    <string name="label_plus_two_string_regex_second">%s [%s]</string>
    <string name="label_title_search_by">Cari [%s] Berdasarkan [%s]</string>
    <string name="label_title_search">Cari Berdasarkan [%s]</string>
    <string name="label_show_overload_of">Tampilkan Seluruh Data %s</string>
    <string name="label_show_overload">Tetap tampilkan seluruh Data</string>
    <string name="label_see_child">Lihat seluruh %s yang teregristasi dengan %s ini</string>
    <string name="label_registered_of">Teregistrasi dengan %s</string>

    <string name="admin_menu">Admin</string>
    <string name="crime_location_menu">Lokasi Rawan Kriminal</string>
    <string name="province_menu">Provinsi</string>
    <string name="city_menu">Kota / Kabupaten</string>
    <string name="sub_district_menu">Kecamatan</string>
    <string name="urban_village_menu">Kelurahan</string>

    <string name="setting_debug_mode_menu">Mode Debug</string>
    <string name="setting_profile_menu">Profil</string>
    <string name="setting_exit_apps_menu">Keluar Aplikasi</string>
    <string name="setting_camera_menu">Kamera</string>
    <string name="setting_gallery_menu">Galeri</string>

    <string name="notification_error_title">Kesalahan</string>
    <string name="notification_warning_title">Peringatan</string>
    <string name="notification_information_title">Informasi</string>
    <string name="notification_success_title">Berhasil</string>

    <string name="message_choose_parent_for_this_area">Pilih [%s] yang akan diregistrasikan dengan [%s] ini</string>
    <string name="message_area_registration">[%s] ini teregristrasi dengan [%s]</string>
    <string name="message_title_delete">Hapus %s</string>
    <string name="message_delete">Apakah Anda ingin [menghapus] data %s [%s] ?</string>
    <string name="message_title_reset_password">Reset Kata Sandi %s</string>
    <string name="message_reset_password">Apakah Anda ingin [me-reset Kata Sandi] %s [%s] ?</string>
    <string name="message_activate">Apakah Anda ingin [%s] %s [%s] ?</string>

    <string name="message_loading_splash">Memuat koneksi, mohon menunggu…</string>
    <string name="message_loading_login">[Mohon menunggu]\nKami sedang [mencari] data [Credential Anda]</string>
    <string name="message_loading">[Mohon menunggu]\nKami sedang [%s]</string>

    <string name="message_logout_option">Apakah Anda ingin [keluar] dari aplikasi ?</string>
    <string name="message_success">Berhasil %s</string>
    <string name="message_success_add">Berhasil Menambahkan %s</string>
    <string name="message_success_update">Berhasil Merubah %s</string>
    <string name="message_success_delete">Berhasil Menghapus %s</string>

    <string name="message_no_title_network">Tidak Ada Koneksi Internet</string>
    <string name="message_no_network">Sepertinya Perangkat Anda mengalami kendala dalam Jaringan Internet</string>
    <string name="message_error_title_general">Mohon Maaf, terjadi kesalahan</string>
    <string name="message_error_general">Tetap tenang, Kami melakukan yang terbaik untuk Anda, dan Kami akan segera kembali</string>
    <string name="message_error_network">[%s] %s, Hit Time in %s</string>
    <string name="message_error_something_wrong">Terjadi Kesalahan</string>

    <string name="message_title_overload_data">Informasi Hasil Pencarian Data %s</string>
    <string name="message_overload_data">Kami menemukan [%s] Data [%s], Data ini terlalu banyak untuk ditampilkan, Anda bisa melakukan Pencarian Data [%s] berdasarkan [%s] untuk mendapatkan Data yang lebih Spesifik.</string>
    <string name="message_overload_data_area">Atau Anda dapat mencari Data [%s] dimulai dari [%s] terlebih dahulu.</string>
    <string name="message_question_overload_data">Apakah Anda tetap ingin menampilkan [seluruh Data %s] ?</string>

    <string name="message_overload_upload_image">Maksimal Upload [%s] adalah [%s] %s</string>
    <string name="message_minimum_upload_image">Minimal Upload [%s %s %s]</string>

    <string name="message_error_empty">%s harus diisi, [Tidak Boleh kosong]</string>
    <string name="message_error_empty_non_spannable">%s harus diisi, Tidak Boleh kosong</string>
    <string name="message_error_not_valid">%s yang Anda masukkan [Tidak Valid]</string>
    <string name="message_error_validate_not_valid">%s dan %s yang Anda masukkan [Tidak Valid]</string>
    <string name="message_error_permission_change_image_profile">Anda harus mengizinkan Aplikasi untuk mengakses Kamera dan Galeri Anda untuk bisa mengubah Foto Profil</string>
    <string name="message_empty_list">Mohon Maaf, %s [tidak ditemukan]</string>
    <string name="message_empty_list_by_search">Mohon Maaf, [%s] yang Anda cari [tidak ditemukan]</string>
    <string name="message_all_data_was_load">Seluruh Data %s telah berhasil ditampilkan semua</string>
</resources>