<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_bottom_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_text_input_layout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_bottom_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame_text_input_layout_inner"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:singleLine="true"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_negative_bottom_input"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btn_positive_bottom_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            app:cornerRadius="10dp" />
    </LinearLayout>
</LinearLayout>