<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title_role_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_role_state" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/margin_half_default"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_option_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="@dimen/margin_half_default"
            android:padding="@dimen/padding_half_default"
            android:gravity="center"
            android:background="@drawable/button_primary_ripple_white"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/white"
            android:text="@string/label_role_root" />

        <TextView
            android:id="@+id/tv_option_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="@dimen/margin_half_default"
            android:padding="@dimen/padding_half_default"
            android:gravity="center"
            android:background="@drawable/button_transparent_ripple_primary"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/primary"
            android:text="@string/label_role_admin" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_option_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/padding_half_default"
        android:gravity="center"
        android:background="@drawable/button_red_ripple_white"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="@color/white"
        android:text="@string/label_non_active_admin_now" />
</LinearLayout>