<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.module.password.PasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/i_app_bar_password"
            layout="@layout/app_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/i_app_bar_password">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:orientation="vertical" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_existing_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/frame_text_input_layout"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_existing_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/frame_text_input_layout_inner"
                        android:hint="@string/label_existing_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:background="@drawable/frame_text_input_layout"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/frame_text_input_layout_inner"
                        android:hint="@string/label_new_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_confirm_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_half_default"
                    android:background="@drawable/frame_text_input_layout"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_confirm_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/frame_text_input_layout_inner"
                        android:hint="@string/label_confirm_new_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_half_default"
                    android:gravity="end|center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_half_default"
                        android:text="@string/label_show_password" />

                    <ImageView
                        android:id="@+id/iv_btn_show_hide_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_secondary_ripple_primary"
                        android:padding="@dimen/padding_half_default"
                        app:srcCompat="@drawable/ic_round_visibility_24"
                        app:tint="@color/primary" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_submit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/label_login"
                    app:cornerRadius="@dimen/round_default" />

                <Button
                    android:id="@+id/btn_cancel_password"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    app:cornerRadius="@dimen/round_default" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>