<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_background_menu_area_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/frame_background_light_blue"
    android:padding="20dp"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/tv_name_area_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/title"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date_area_detail"
        app:layout_constraintEnd_toStartOf="@+id/tv_date_area_detail"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_date_area_detail" />

    <TextView
        android:id="@+id/tv_date_area_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_background_primary"
        android:fontFamily="@font/open_sans_light"
        android:paddingHorizontal="10dp"
        android:paddingVertical="2dp"
        android:text="@string/title"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <ImageView
        android:id="@+id/iv_icon_today"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/frame_background_primary"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_area_detail"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_round_calendar_today_24" />

    <TextView
        android:id="@+id/tv_label_count_today"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/label_count_today"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/iv_icon_today"
        app:layout_constraintEnd_toEndOf="@+id/tv_date_area_detail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_icon_today"
        app:layout_constraintTop_toTopOf="@+id/iv_icon_today"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_count_data_today"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/label_count_data"
        android:textSize="18sp"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/iv_icon_today"
        app:layout_constraintEnd_toEndOf="@+id/tv_label_count_today"
        app:layout_constraintStart_toStartOf="@+id/tv_label_count_today"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_count_today" />

    <ImageView
        android:id="@+id/iv_icon_month"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/frame_background_primary"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iv_icon_today"
        app:layout_constraintTop_toBottomOf="@+id/iv_icon_today"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_round_date_range_24" />

    <TextView
        android:id="@+id/tv_label_count_month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/label_count_month"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/iv_icon_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_icon_month"
        app:layout_constraintTop_toTopOf="@+id/iv_icon_month"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_count_data_month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/label_count_data"
        android:textSize="18sp"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/iv_icon_month"
        app:layout_constraintEnd_toEndOf="@+id/tv_label_count_month"
        app:layout_constraintStart_toStartOf="@+id/tv_label_count_month"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_count_month" />
</androidx.constraintlayout.widget.ConstraintLayout>